Fix out of bounds edit div.

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -5,7 +5,6 @@
   border: 2px solid #e0e0e0;
   border-radius: 5pt;
   text-align: center;
-  white-space: nowrap;
 
   > * {
     margin: 10pt;
